@@ -9,6 +9,8 @@ post-v1.10.0
     - OpenFlow:
       * The "dec_mpls_ttl" and "set_mpls_ttl" actions from OpenFlow
         1.1 and later are now implemented.
+      * New "stack" extension for use in actions, to push and pop from
+        NXM fields.
 
 
 v1.10.0 - xx xxx xxxx
